--- a/src/turtle_pet/src/manifest.json
+++ b/src/turtle_pet/src/manifest.json
@@ -12,5 +12,7 @@
   "browser_action": {
     "default_title": "Append Test Text"
   },
+  "web_accessible_resources": ["imgTurtle/idleTurtle2.png"],
+  
   "manifest_version": 2
 }
