--- a/src/turtle_pet/src/manifest.json
+++ b/src/turtle_pet/src/manifest.json
@@ -3,16 +3,18 @@
   "description": "oui",
   "version": "1.0",
   "permissions": [
-    "activeTab"
+    "storage", "activeTab", "scripting"
   ],
   "background": {
-    "scripts": ["background.js"],
-    "persistent": false
+    "service_worker": "background.js"
   },
-  "browser_action": {
-    "default_title": "Append Test Text"
+  "action": {
+    "default_title": "TurtlePet's popup",
+    "default_popup": "popup.html"
   },
-  "web_accessible_resources": ["imgTurtle/*"],
-  
-  "manifest_version": 2
+  "web_accessible_resources":[{
+  "resources": ["imgTurtle/*"],
+  "matches": ["<all_urls>"]
+  }],
+  "manifest_version": 3
 }
